# Langgraphcourse

./: .gitignore  README.md  check_env.py  pyproject.toml  special_db.sqlite
01-foundations/: Data Visualization with Matplotlib.ipynb  Matplotlib and Seaborn.ipynb  Pandas.ipynb  challenge.py  concept.md  demographic_detail.csv  main.ipynb  project.py  roster_with_score.csv  solution.py
02-state-management/: challenge.py  concept.md  project.py  solution.py
03-persistence/: challenge.py  concept.md  project.py  solution.py
04-human-in-the-loop/: challenge.py  concept.md  project.py  solution.py
05-tool-use/: challenge.py  concept.md  project.py  solution.py
06-mcp-integration/: challenge.py  concept.md  project.py  solution.py
07-special-project-a2a-mcp/: challenge.py  concept.md  gemini_testing.py  project.py  solution.py
08-multi-agent-orchestration/: challenge.py  concept.md  project.py  solution.py
09-capstone-project/: main.py
09-capstone-project/agents/: editor.py  researcher.py
09-capstone-project/tools/: search.py
